--- a/StudentManager/StudentManager.web/Views/Shared/_Layout.cshtml
+++ b/StudentManager/StudentManager.web/Views/Shared/_Layout.cshtml
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/jqueryui")
     @Scripts.Render("~/bundles/modernizr")
+    @* <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css"> *@
+    @* <script src="//code.jquery.com/jquery-1.10.2.js"></script> *@
+    @* <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script> *@
 
 </head>
 <body>
@@ -23,11 +27,10 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
 
-                    <li>@Html.ActionLink("Students", "Index", "Student")</li>
-                    <li>@Html.ActionLink("Professors", "Index", "Professors")</li>
 
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
+                    @* <li>@Html.ActionLink("About", "About", "Home")</li> *@
+                    @* <li>@Html.ActionLink("Contact", "Contact", "Home")</li> *@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -42,6 +45,7 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
