--- a/StudentManager/StudentManager.web/Content/Site.css
+++ b/StudentManager/StudentManager.web/Content/Site.css
@@ -1,12 +1,14 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -21,4 +23,12 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+.navbar-custom {
+    background-color: #443742;
+    border-color: #E2E8C0;
+    color: #e2e8c0;
+}
+.jumbotron {
+    background-image: url("../Content/images/school.png");
 }
