--- a/StudentManager/StudentManager.web/Views/Shared/_LoginPartial.cshtml
+++ b/StudentManager/StudentManager.web/Views/Shared/_LoginPartial.cshtml
@@ -6,6 +6,7 @@
         @Html.AntiForgeryToken()
     <ul class="nav navbar-nav">
         <li>@Html.ActionLink("Classes", "Index", "Classes")</li>
+        <li>@Html.ActionLink("Courses", "Index", "Courses")</li>
         <li>@Html.ActionLink("Students", "Index", "Student")</li>
         <li>@Html.ActionLink("Professors", "Index", "Professors")</li>
 
