--- a/StudentManager/StudentManager.web/Views/Student/CreateStudent.cshtml
+++ b/StudentManager/StudentManager.web/Views/Student/CreateStudent.cshtml
@@ -1,4 +1,6 @@
-﻿@model StudentManager.web.ViewModels.StudentDetailsViewModel
+﻿@using Microsoft.Ajax.Utilities
+@using WebGrease.Css.Extensions
+@model StudentManager.web.ViewModels.StudentDetailsViewModel
 
 @{
     ViewBag.Title = "Create Student";
@@ -58,7 +60,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.BirthDay, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.TextBoxFor(model => model.BirthDay,"{0:dd-MM-yyyy}", new { @class = "datetimepicker form-control" })
+            @Html.TextBoxFor(model => model.BirthDay, "{0:dd-MM-yyyy}", new { @class = "datetimepicker form-control" })
             @Html.ValidationMessageFor(model => model.BirthDay, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -103,11 +105,9 @@
                 new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.StudentClass, "",
                 new { @class = "text-danger" })
-
         </div>
     </div>
-
-
+ 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Create" class="btn btn-default" />
