--- a/StudentManager/StudentManager.web/Views/Courses/Index.cshtml
+++ b/StudentManager/StudentManager.web/Views/Courses/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create","Courses", "", new{@class="btn btn-default"})
 </p>
 <table class="table table-striped ">
     <thead>
@@ -24,6 +24,7 @@
             <th scope="col">
                 @Html.DisplayNameFor(model => model.Credits)
             </th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -44,10 +45,10 @@
                     @Html.DisplayFor(modelItem => item.Credits)
                 </td>
 
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                <td class="btn-group">
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new{@class="btn btn-default"}) 
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }, new{@class="btn btn-default"}) 
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new{@class="btn btn-default"})
                 </td>
             </tr>
         }
