--- a/StudentManager/StudentManager.web/Content/Site.css
+++ b/StudentManager/StudentManager.web/Content/Site.css
@@ -1,9 +1,12 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+   
     
 }
-
+h1, h2, h3, h4, h5, .jumbotron h1 {
+    color: black;
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
@@ -25,10 +28,51 @@ textarea {
     max-width: 280px;
 }
 .navbar-custom {
-    background-color: #443742;
-    border-color: #E2E8C0;
-    color: #e2e8c0;
+    border-bottom: 1px solid aqua;
+    background-color: cadetblue;
+
+}
+.navbar-brand {
+    font-size: 20px;
+    font-weight: bolder;
+    font-family: cursive;
+}
+a {
+    color: black;
+    text-decoration: none;
+    font-family: cursive;
+}
+a:hover {
+    border-radius: 10px;
 }
 .jumbotron {
-    background-image: url("../Content/images/school.png");
+    border-color: aqua;
+}
+navbar-nav {
+    color: black;
+}
+.nav > li > a {
+    color: black;
+    font-weight: bold;
+}
+
+.navbar-custom .navbar-nav > li > a:hover,
+.navbar-custom .navbar-nav > li > a:focus {
+    color: darkgreen;
+    background-color: cadetblue;
+}
+dt {
+    font-size: 18px;
+    font-family: cursive;
+    font-weight: 300;
+    color: black;
+}
+.text-righ {
+    text-align: right;
+}
+.row {
+    font-size: 16px;
+    font-family: cursive;
+    margin-bottom: 50px;
+    margin-top: 50px;
 }
