--- a/StudentManager/StudentManager.web/Views/Classes/Edit.cshtml
+++ b/StudentManager/StudentManager.web/Views/Classes/Edit.cshtml
@@ -51,5 +51,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", "Classes","", new{@class="btn btn-default"})
 </div>
