--- a/StudentManager/StudentManager.web/Views/Courses/Details.cshtml
+++ b/StudentManager/StudentManager.web/Views/Courses/Details.cshtml
@@ -9,48 +9,30 @@
 <div>
     <h4>@Model.Name</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+    <div class="row">
+        <div class="col-sm-4 text-righ">@Html.DisplayNameFor(model => model.Name)</div>
+        <div class="col-sm-8">@Html.DisplayFor(model => model.Name)</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Year)
-        </dt>
+        <div class="col-sm-4 text-righ">@Html.DisplayNameFor(model => model.Year)</div>
+        <div class="col-sm-8">@Html.DisplayFor(model => model.Year)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Year)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Semester)
-        </dt>
+        <div class="col-sm-4 text-righ">@Html.DisplayNameFor(model => model.Semester)</div>
+        <div class="col-sm-8">@Html.DisplayFor(model => model.Semester)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Semester)
-        </dd>
+        <div class="col-sm-4 text-righ">@Html.DisplayNameFor(model => model.Credits)</div>
+        <div class="col-sm-8">@Html.DisplayFor(model => model.Credits)</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Credits)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Credits)
-        </dd>
-
-    </dl>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+<p class="btn-group">
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new{@class="btn btn-default"})
+    @Html.ActionLink("Back to List", "Index","Courses","",new{@class="btn btn-default"})
 </p>
 
 
-<h2>Active Professors</h2>
+<h4>Professors</h4>
 <table class="table">
     <tr>
         <th>
@@ -79,10 +61,9 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.IsActive)
                 </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit","Professors", new { id = item.Id },"") |
-                    @Html.ActionLink("Details", "Details","Professors", new { id = item.Id }, "") |
-                    @Html.ActionLink("Delete", "Delete","Professors", new { id = item.Id },"")
+                <td class="btn-group">
+                    @Html.ActionLink("Edit", "Edit","Professors", new { id = item.Id }, new{@class="btn btn-default"})
+                    @Html.ActionLink("Details", "Details","Professors", new { id = item.Id }, new{@class="btn btn-default"})
                 </td>
             </tr>
         }
@@ -115,14 +96,10 @@
             <td>
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
-           
-            <td>
-                @Html.DisplayFor(modelItem => item.IsActive)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit","Student", new { id = item.Id },"") |
-                @Html.ActionLink("Details", "DetailsAsync", "Student", new { id = item.Id },"") |
-                @Html.ActionLink("Delete", "Delete", "Student", new { id = item.Id }, "")
+
+            <td class="btn-group">
+                @Html.ActionLink("Edit", "Edit","Student", new { id = item.Id }, new{@class="btn btn-default"})
+                @Html.ActionLink("Details", "DetailsAsync", "Student", new { id = item.Id }, new{@class="btn btn-default"}) 
             </td>
         </tr>
     }
