--- a/StudentManager/StudentManager.web/Views/Professors/Index.cshtml
+++ b/StudentManager/StudentManager.web/Views/Professors/Index.cshtml
@@ -7,10 +7,10 @@
 <h2>Professors</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", "Professors", "", new{@class="btn btn-default"})
 </p>
 <h2>Active Professors</h2>
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.FirstName)
@@ -38,10 +38,10 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.IsActive)
                 </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                    @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                    @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                <td class="btn-group">
+                    @Html.ActionLink("Edit", "Edit", new {id = item.Id}, new{@class="btn btn-default"})
+                    @Html.ActionLink("Details", "Details", new {id = item.Id}, new{@class="btn btn-default"})
+                    @Html.ActionLink("Delete", "Delete", new {id = item.Id}, new{@class="btn btn-default"})
                 </td>
             </tr>
         }
@@ -49,7 +49,7 @@
 
 </table>
 <h2>Inactive Professors</h2>
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.FirstName)
@@ -67,22 +67,22 @@
     {
         if (!item.IsActive)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IsActive)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                    @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                    @Html.ActionLink("Delete", "Delete", new {id = item.Id})
-                </td>
-            </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.FirstName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.LastName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.IsActive)
+    </td>
+    <td class="btn-group">
+        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new{@class="btn btn-default"})
+        @Html.ActionLink("Details", "Details", new { id = item.Id }, new{@class="btn btn-default"})
+        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new{@class="btn btn-default"})
+    </td>
+</tr>
         }
     }
 
