--- a/StudentManager/StudentManager.web/Views/Student/Index.cshtml
+++ b/StudentManager/StudentManager.web/Views/Student/Index.cshtml
@@ -7,25 +7,22 @@
 <h2>Students</h2>
 
 <p>
-    @Html.ActionLink("Create New", "CreateStudent")
+    @Html.ActionLink("Create New", "CreateStudent","Student","", new{@class="btn btn-default"})
 </p>
 <h2>Active students</h2>
-<table class="table">
+<table class="table table-striped">
     <tr>
-        <th>
+        <th scope="col">
             @Html.DisplayNameFor(model => model.FirstName)
         </th>
-        <th>
+        <th scope="col">
             @Html.DisplayNameFor(model => model.LastName)
         </th>
-        <th>
+        <th scope="col">
             @Html.DisplayNameFor(model => model.Year)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </th>
 
-        <th>Actions</th>
+        <th scope="col">Actions</th>
     </tr>
 
     @foreach (var item in Model)
@@ -42,13 +39,10 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Year)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IsActive)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                    @Html.ActionLink("Details", "DetailsAsync", new {id = item.Id}) |
-                    @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                <td class="btn-group">
+                    @Html.ActionLink("Edit", "Edit", new {id = item.Id}, new{@class="btn btn-default"}) 
+                    @Html.ActionLink("Details", "DetailsAsync", new {id = item.Id}, new{@class="btn btn-default"}) 
+                    @Html.ActionLink("Delete", "Delete", new {id = item.Id}, new{@class="btn btn-default"})
                 </td>
             </tr>
         }
@@ -56,7 +50,7 @@
 
 </table>
 <h2>Inactive students</h2>
-<table class="table">
+<table class="table table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.FirstName)
@@ -66,9 +60,6 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Year)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsActive)
         </th>
 
         <th>Actions</th>
@@ -88,13 +79,10 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Year)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IsActive)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "DetailsAsync", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                <td class="btn-group">
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new{@class="btn btn-default"}) 
+                    @Html.ActionLink("Details", "DetailsAsync", new { id = item.Id }, new{@class="btn btn-default"}) 
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new{@class="btn btn-default"})
                 </td>
             </tr>
         }
