--- a/StudentManager/StudentManager.web/Views/Classes/Index.cshtml
+++ b/StudentManager/StudentManager.web/Views/Classes/Index.cshtml
@@ -4,12 +4,12 @@
     ViewBag.Title = "Index";
 }
 
-<h2>All classes</h2>
+<h2>All groups</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create", "Classes","", new{@class="btn btn-default"})
 </p>
-<h2>Active classes</h2>
+<h2>Active groups</h2>
 <table class="table table-striped">
     <tr>
         <th scope="col">
@@ -43,7 +43,7 @@
     }
 
 </table>
-<h2>Inactive classes</h2>
+<h2>Inactive groups</h2>
 <table class="table table-striped">
     <tr>
         <th scope="col">
