--- a/StudentManager/StudentManager.web/Views/Shared/_LoginPartial.cshtml
+++ b/StudentManager/StudentManager.web/Views/Shared/_LoginPartial.cshtml
@@ -5,7 +5,7 @@
     {
         @Html.AntiForgeryToken()
     <ul class="nav navbar-nav">
-        <li>@Html.ActionLink("Classes", "Index", "Classes")</li>
+        <li>@Html.ActionLink("Groups", "Index", "Classes")</li>
         <li>@Html.ActionLink("Courses", "Index", "Courses")</li>
         <li>@Html.ActionLink("Students", "Index", "Student")</li>
         <li>@Html.ActionLink("Professors", "Index", "Professors")</li>
